# Boston-Transport-Department

./: .gitignore  ETL_IMPLEMENTATION_SUMMARY.md  QUICK_START_GUIDE.md  README.md  RUNBOOK.md  TIMEMANAGER_README.md  docker-compose.yml  k8s-statistics-etl-job.yaml  package-lock.json  pyproject.toml  simplified-etl-job.yaml  test-local.sh  upload-datasets-job.yaml
.github/workflows/: docker-build-publish.yml
conf/: core-site.xml  hdfs-site.xml  hive-site.xml
data-streamers/: .gitignore  Dockerfile  README.md  docker-compose.yaml  streamer.py
docs/: ETL_README.md  SHORT_INFO_ETL.md
etl_dataanalysis/: ANALYTICS.md  MAINCONFIG.md  PIPELINE_DIAGRAM.md  README.md  TRANSFORMATIONS.md  WEATHER_ENRICHMENT.md  WINDOWED_AGGREGATIONS.md  analytics.py  config.py  main.py  requirements.txt  schemas.py  transformations.py  weather_enrichment.py  windowed_aggregations.py
etl_dataanalysis/transformations/: transformations.py
k8s/: bike-streamer.yaml  data-configmap.yaml  namespace.yaml  redis.yaml  taxi-streamer.yaml  weather-streamer.yaml
mock-data/: bike_trips.csv  taxi_trips.csv  weather_observations.csv
notebooks/: example.ipynb  hive.ipynb  streaming.ipynb
scripts/: check-metastore-local.sh  create-mvp-dbs.sql  smoke-test.sh  smoke-test.sql  upload-tez-libs.sh
src/dashboard/: App.tsx  Dockerfile  Navigation-Diagram.puml  (+7 more)
streamers/: Dockerfile.bike  bike_streamer.py  taxi_streamer.py  weather_streamer.py
time-manager/: Dockerfile  app.py
tools/: README.md  create-connectors.py  create-datasets.py  create-schemas.py  create-topics.py  download-datasets.py  forward-all.py  query-hive.py  query-trino.py  spark.py
(+260 files in other folders)
