[project]
name = "big-data-tools"
version = "0.1.0"
description = "Tools for big data stack on Kubernetes"
dependencies = [
    "kubernetes>=29.0.0",
    "kafka-python>=2.0.2",
    "pyhive>=0.7.0",
    "rich>=13.0.0",
    "pendulum>=2.1.0",
    "thrift>=0.19.0",
    "thrift_sasl>=0.4.0",
    "matplotlib>=3.10.0",
    "pandas>=2.1.0",
    "seaborn>=0.13.0",
    "pyarrow>=15.0.0",
    "grpcio>=1.66.0",
    "grpcio-status>=1.66.0",
    "pyspark>=4.0.1",
    "ipykernel>=6.28.0",
    "gdown>=5.2.0",
    "duckdb>=1.4.2",
    "requests>=2.32.5",
    "fastapi>=0.123.0",
    "uvicorn>=0.38.0",
    "fastavro>=1.12.1",
]
requires-python = ">=3.10"

[tool.uv]
dev-dependencies = []  # Add extras here if needed

[[tool.uv.index]] 
url = "https://pypi.python.org/simple" 
default = true

[tool.uv.workspace]
members = [
    "src/streamer",
    "src/time-manager",
    "src/hive-http-proxy",
]
